Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123215

fatal error: qplatformmediadevices_p.h: No such file or directory when building from source for Qt 6.6.2 on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.6, 6.7.1, 6.8.0 FF
    • 6.6.2
    • Build System
    • None
    • OS: Windows 10
      Cmake: v3.29
      Ninja: v1.11.1
      Python: 3.11.8
      MinGW: 11.2; binary from niXman/mingw-builds-binaries
    • Windows
    • f5bd35a2e (dev), 9f2ad26df (6.7), b280c7f5e (6.6), 8df335668 (tqtc/lts-6.5)

    Description

      Coming across a bug where building from source on windows with the command

      cmake --build . --parallel 

      fails stating that qplatformmediadevices_p.h does not exists. For context, here is a forum post.

      Attachments

        1. .ninja_log
          1.04 MB
        2. config.summary
          18 kB
        3. build_ninja_log.zip
          2.88 MB
        4. log.zip
          22.57 MB
        For Gerrit Dashboard: QTBUG-123215
        # Subject Branch Project Status CR V

        Activity

          People

            semlanik Alexey Edelev
            kyrlon Kyron Longwood
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes