Add a proper guarding of windows related includes

Guard the QWindowsMediaDevices usage with the 'wmf' feature, since
the feature is not necessarly present on all windows platforms.

Fixes: QTBUG-123215
Change-Id: Ib1faa52ad04535726eb65a4bfb4e60b96029de76
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit f5bd35a2eeb11b7a8f7f9a4230f1c3c5dc79c5ee)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 9f2ad26df34e1e291ef46c54c791ea8fa46e77af)
(cherry picked from commit b280c7f5e04c893506ff56bfe2d7534ae90e969a)